# sing-box-config-api

./: .gitignore  Cargo.toml  README.md  config.toml  install.sh
.github/workflows/: release.yml
scripts/: start-service.sh  stop-service.sh
src/: config.rs  main.rs  routes.rs
